--- a/index.html
+++ b/index.html
@@ -34,5 +34,20 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <script src="/src/assets/scripts/jquery-3.3.1.min.js"></script>
+    <script src="/src/assets/scripts/jquery-ui.js"></script>
+    <script src="/src/assets/scripts/popper.min.js"></script>
+    <script src="/src/assets/scripts/bootstrap.min.js"></script>
+    <script src="/src/assets/scripts/owl.carousel.min.js"></script>
+    <script src="/src/assets/scripts/mediaelement-and-player.min.js"></script>
+    <script src="/src/assets/scripts/jquery.stellar.min.js"></script>
+    <script src="/src/assets/scripts/jquery.countdown.min.js"></script>
+    <script src="/src/assets/scripts/jquery.magnific-popup.min.js"></script>
+    <script src="/src/assets/scripts/bootstrap-datepicker.min.js"></script>
+    <script src="/src/assets/scripts/aos.js"></script>
+    <script src="/src/assets/scripts/circleaudioplayer.js"></script>
+
+    <script src="/src/assets/scripts/main.js"></script>
   </body>
 </html>
